--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html>
 	<head>
-		<title>C3 Website Project</title>
-		<h2>Derek Q. Xu</h2>
+		<title>Derek Q. Xu</title>
+		<h2>Derek Qiang Xu</h2>
 		<h3>First Year Electrical Engineering Student</h3>
 		<h3>University of California, Los Angeles</h3>
 		<hr />
 	</head>
 	<body>
 		<b>Contact Information</b> <br /> <br />
-		<em>Phone</em>:&emsp;&emsp;(555) 555-5555<br />
+		<em>Phone</em>:&emsp;&emsp;(858) 353-9936<br />
 		<em>Email</em>:&emsp;&emsp;Derekqxu@g.ucla.edu<br />
-		<em>GitHub</em>:&emsp;&ensp;<a href="https://github.com/DerekQXu"><img src = "https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" alt = "nothing" width = "20" height = "20"></a><br />
+		<em>GitHub</em>:&emsp;&ensp;<a href="https://github.com/DerekQXu"><img src = "https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" alt = "nothing" width = "20" height = "20"></a> (under construction)<br />
 		<em>LinkedIn</em>:&emsp;<a href="https://www.google.com/search?q=spaghetti&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiO0oT3yYPQAhVriVQKHcy3A1AQ_AUICCgB&biw=1280&bih=600#imgrc=lR8obJcv2SDyfM%3A"><img src = "https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt = "nothing" width = "20" height = "20"></a><br /> <br />
 		<hr />
 	</body>
@@ -62,9 +62,10 @@
 				<li>San Diego Teen Court Juror</li>
 				<li>Torrey Pines High School Jazz Band</li>
 			</ul> -->
-		<h1>THANK YOU FOR VISITING MY SITE!~</h1>
 		
 			<div style="text-align: center;"> <img src = "http://www.granini.com/data/images/fruit_images/full/pink-grapefruit-04.png" alt = "nothing" align="middle"></div>
-		</br>
+			
+		<p style="text-align:center"><h2>THANK YOU FOR VISITING MY SITE!</h2>
+	<!--	</br> -->
 	</body>
 </html>
