--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		
 			<div style="text-align: center;"> <img src = "http://www.granini.com/data/images/fruit_images/full/pink-grapefruit-04.png" alt = "nothing" align="middle"></div>
 			
-		<p style="text-align:center"><h2>THANK YOU FOR VISITING MY SITE!</h2>
+		<h2><p style="text-align:center">THANK YOU FOR VISITING MY SITE!</p></h2>
 	<!--	</br> -->
 	</body>
 </html>
