--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<p style="text-indent: 5em;">
 				My name is Derek Xu, a freshman electrical engineering major at UCLA.
 				I am intereted in the fields of software engineering, hardware engineering, and mathematics.
-				This website contains many of the projects I have made relating to these topics, and is made as my IEEE C3 project.
+				This website contains many of the projects I have made relating to these topics.
 			</p>
 		<hr />
 		
