--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<b>Contact Information</b> <br /> <br />
 		<em>Phone</em>:&emsp;&emsp;(858) 353-9936<br />
 		<em>Email</em>:&emsp;&emsp;Derekqxu@g.ucla.edu<br />
-		<em>GitHub</em>:&emsp;&ensp;<a href="https://github.com/DerekQXu"><img src = "https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" alt = "nothing" width = "20" height = "20"></a><em> (under construction)</em><br />
-		<em>LinkedIn</em>:&emsp;<a href="https://www.google.com/search?q=spaghetti&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiO0oT3yYPQAhVriVQKHcy3A1AQ_AUICCgB&biw=1280&bih=600#imgrc=lR8obJcv2SDyfM%3A"><img src = "https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt = "nothing" width = "20" height = "20"></a><br /> <br />
+		<em>GitHub</em>:&emsp;&ensp;<a href="https://github.com/DerekQXu"><img src = "https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" alt = "nothing" width = "20" height = "20"></a><br />
+		<em>LinkedIn</em>:&emsp;<a href="https://www.google.com/search?q=spaghetti&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiO0oT3yYPQAhVriVQKHcy3A1AQ_AUICCgB&biw=1280&bih=600#imgrc=lR8obJcv2SDyfM%3A"><img src = "https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt = "nothing" width = "20" height = "20"></a><br /><em> (under construction)</em> <br />
 		<hr />
 	</body>
 	<body>
