--- a/index.html
+++ b/index.html
@@ -1,3 +1,84 @@
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
+<!DOCTYPE html>
+<html lang="en">
+  <nav class="navbar navbar-custom">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Derek Xu</a>
+      </div>
+      <ul class="nav navbar-nav mn_primary_menu">
+        <li><a href="#">Home</a></li>
+        <li class="dropdown mn_dropdown_menu">
+			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+			area-expanded="false">Projects <span class = "caret"></span></a>
+			<ul class="dropdown-menu">
+				<li><a href="#">Pupil Detection</a></li>
+				<li><a href="#">Micromouse Simulator</a></li>
+				<li><a href="#">Ion-trapping Machine (UCLA eShop)</a></li>
+				<li><a href="#">BlueTooth LE with STMicro and BeagleBone</a></li>
+				<li><a href="#">R.A.T. and NATCAR (IEEE)</a></li>
+				<li><a href="#">Terminal Schedular</a></li>
+				<li><a href="#">WiFi Localization with ML</a></li>
+				<li><a href="#">Custom Variable HVPS (UCLA eShop)</a></li>
+				<li><a href="#">CCD Correction Software</a></li>
+				<li><a href="#">Edge Detection with Lateral Inhibition</a></li>
+			</ul>
+		</li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+  <head>
+    <meta charset="utf-8"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- CSS stuff -->
+	<link href="style.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="text">
+		<h1>
+			READ.ME
+		</h1>
+		<h3>
+			My name is Derek Xu. I am a second year Electrical
+			Engineering major at the University of California, Los 
+			Angeles. I am interested in programming, soldering, and
+			designing new technologies. This website contains a 
+			compilation of software and hardware projects I have
+			worked on. Hope you have a nice time here!
+		</h3>
+		<img border="0" src="circuit.png" width=48% height=40% align="right">
+		<h1>
+			About
+		</h1>
+		<p>
+			<ul>
+				<li>Works at UCLA eShop</li>
+				<li>Research under Prof. Kaiser</li>
+				<li>Micromouse with UCLA IEEE</li>
+				<li>Undergraduate Student</li>
+				<li>Side Projects on the side</li>
+			</ul>
+		</p>
+<br />
+<br />
+<br />
+<br />
+<br />
+	</div>
+  </body>
+</html>
+
+<!-- REPLACED HTML FILE: 
 <!doctype html>
 <html>
 	<head>
@@ -56,16 +137,9 @@
 			</ul>
 		<hr />
 		
-	<!--	<b>Other Experiences and Hobbies</b> <br /> 
-			<ul>
-				<li>Scrippes Telemetry Volunteer</li>
-				<li>San Diego Teen Court Juror</li>
-				<li>Torrey Pines High School Jazz Band</li>
-			</ul> -->
-		
 			<div style="text-align: center;"> <img src = "http://www.granini.com/data/images/fruit_images/full/pink-grapefruit-04.png" alt = "nothing" align="middle"></div>
 			
 		<h2><p style="text-align:center">THANK YOU FOR VISITING MY SITE!</p></h2>
-	<!--	</br> -->
 	</body>
 </html>
+-->
