--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-custom">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Derek Xu</a>
+        <a class="navbar-brand" href="index.html">Derek Xu</a>
       </div>
       <ul class="nav navbar-nav mn_primary_menu">
         <li><a href="https://www.github.com/DerekQXu">Github</a></li>
@@ -44,7 +44,7 @@
                         Conway's Game of Life</a></li>
 			</ul>
 		</li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -57,34 +57,15 @@
   <body>
     <div class="text">
 		<h1>
-			READ.ME
+            Contact
 		</h1>
 		<h3>
-			My name is Derek Xu. I am a second year Electrical
-			Engineering major at the University of California, Los 
-			Angeles. I am interested in programming, soldering, and
-			designing new technologies. This website contains a 
-			compilation of software and hardware projects I have
-			worked on. Hope you have a nice time here!
-		</h3>
-		<img border="0" src="circuit.png" width=48% height=40% align="right">
-		<h1>
-			About
-		</h1>
-		<p>
-			<ul>
-				<li>Works at UCLA eShop</li>
-				<li>Research under Prof. Kaiser</li>
-				<li>Micromouse with UCLA IEEE</li>
-				<li>Undergraduate Student</li>
-				<li>Side Projects on the side</li>
-			</ul>
+            Email: derekqxu@gmail.com<br />
+        </h3>
+        <p>
+            For additional information such as resume/CV, phone number, address,
+            please send me a private email.
 		</p>
-<br />
-<br />
-<br />
-<br />
-<br />
 	</div>
   </body>
 </html>
