--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,17 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <nav class="navbar navbar-custom">
+  <nav class="navbar navbar-fixed-top navbar-custom">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="index.html">Derek Xu</a>
-      </div>
+		<button type="button" class="navbar-toggle" data-target="#myNav" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+	  </div>
+	  <div class="collapse navbar-collapse" id="myNav">
       <ul class="nav navbar-nav mn_primary_menu">
         <li><a href="https://www.github.com/DerekQXu">Github</a></li>
         <li class="dropdown mn_dropdown_menu">
@@ -44,8 +50,9 @@
                         Conway's Game of Life</a></li>
 			</ul>
 		</li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
+	  </div>
     </div>
   </nav>
   <head>
@@ -56,6 +63,8 @@
   </head>
   <body>
     <div class="text">
+		<br>
+		<br>
 		<h1>
             Contact
 		</h1>
@@ -66,6 +75,7 @@
             For additional information such as resume/CV, phone number, address,
             please send me a private email.
 		</p>
+		<br>
 	</div>
   </body>
 </html>
