--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <nav class="navbar navbar-custom">
+  <nav class="navbar navbar-fixed-top navbar-custom">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Derek Xu</a>
-      </div>
+        <a class="navbar-brand">Derek Xu</a>
+		<button type="button" class="navbar-toggle" data-target="#myNav" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+	  </div>
+	  <div class="collapse navbar-collapse" id="myNav">
       <ul class="nav navbar-nav mn_primary_menu">
         <li><a href="https://www.github.com/DerekQXu">Github</a></li>
         <li class="dropdown mn_dropdown_menu">
@@ -46,6 +52,7 @@
 		</li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
+	  </div>
     </div>
   </nav>
   <head>
@@ -57,41 +64,92 @@
   <body>
     <div class="text">
 		<table border="0" width="100%">
+		<br>
+		<br>
 		<tr>
 			<h1>
-				READ.ME
+				ABOUT.ME
 			</h1>
-			<h3>
+			<h4>
 				My name is Derek Xu. I am a second year Electrical
 				Engineering major at the University of California, Los 
 				Angeles. I am interested in programming, soldering, and
 				designing new technologies. This website contains a 
 				compilation of software and hardware projects I have
 				worked on. Hope you have a nice time here!
-			</h3>
+			</h4>
 		</tr>
 		<tr>
-			<th>
-				<h1>
-					About
-				</h1>
-				<p>
-				<ul>
-					<li>Works at UCLA eShop</li>
-					<li>Research under Prof. Kaiser</li>
-					<li>Micromouse with UCLA IEEE</li>
-					<li>Undergraduate Student</li>
-					<li>Side Projects on the side</li>
-				</ul>
-				<br />
-				<br />
-				<br />
-				</p>
-			</th>
-			<th>
-				<img border="0" src="circuit.png" height=200px width=400px align="right">
-			</th>
+			<img border="0" src="circuit.png" height=60% width=100% align="center">
 		</tr>
+		<br>
+		<br>
 	</div>
   </body>
 </html>
+
+<!-- REPLACED HTML FILE: 
+<!doctype html>
+<html>
+	<head>
+		<title>Derek Q. Xu</title>
+		<h2>Derek Qiang Xu</h2>
+		<h3>First Year Electrical Engineering Student</h3>
+		<h3>University of California, Los Angeles</h3>
+		<hr />
+	</head>
+	<body>
+		<b>Contact Information</b> <br /> <br />
+		<em>Phone</em>:&emsp;&emsp;(858) 353-9936<br />
+		<em>Email</em>:&emsp;&emsp;Derekqxu@g.ucla.edu<br />
+		<em>GitHub</em>:&emsp;&ensp;<a href="https://github.com/DerekQXu"><img src = "https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png" alt = "nothing" width = "20" height = "20"></a><br />
+		<em>LinkedIn</em>:&emsp;<a href="https://www.google.com/search?q=spaghetti&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiO0oT3yYPQAhVriVQKHcy3A1AQ_AUICCgB&biw=1280&bih=600#imgrc=lR8obJcv2SDyfM%3A"><img src = "https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt = "nothing" width = "20" height = "20"></a><em> (under construction)</em><br /> <br />
+		<hr />
+	</body>
+	<body>
+		<b>Biography</b> <br />
+			<p style="text-indent: 5em;">
+				My name is Derek Xu, a freshman electrical engineering major at UCLA.
+				I am intereted in the fields of software engineering, hardware engineering, and mathematics.
+				This website contains many of the projects I have made relating to these topics.
+			</p>
+		<hr />
+		
+		<b>Current Projects</b> <br />
+			<ul>
+				<li><em>Edge Derection Software</em>:<br /> A C++ program that detects edges on images using the same algorithms as the human visual system.</li>
+				<li><em>Image Fixation Software</em>:<br /> A C++ program that fixes images with physical imperfections in the CPP IC.</li>
+				<li><em>IEEE OPS</em>:<br /> A series of basic EE projects including speakers, LED blinkers, and a final capstone project.</li>
+			</ul>
+		<hr />
+		
+		<b>Past Projects</b> <br />
+			<ul>
+				<li><em>Micromouse Simulator and AI</em>:<br /> A C++ AI that simulates and solves 16x16 mazes using the floodfill algorithm.</li>
+				<li><em>Perceptron AI</em>:<br /> A C++ AI that is able differentiates big from small numbers, through supervised machine learning.</li>
+				<li><em>AP Computer Sci Final Project</em>:<br /> A working Java 2D tower defense game.</li>
+				<li><em>AP Biology Website</em>:<br /> A website compiling information on Risperidone.</li>
+			</ul>
+		<hr />
+		
+		<b>Student Organizations</b> <br />
+			<ul>
+				<li>IEEE OPS</li>
+				<li>IEEE C3</li>
+				<li>ACM AI</li>
+			</ul>
+		<hr />
+		
+		<b>Skills</b> <br /> 
+			<ul>
+				<li>Computer: C++, Java, Python, Wolfram Mathematica, HTML/CSS, Microsoft Excel</li>
+				<li>Languages: English and Mandarin
+			</ul>
+		<hr />
+		
+			<div style="text-align: center;"> <img src = "http://www.granini.com/data/images/fruit_images/full/pink-grapefruit-04.png" alt = "nothing" align="middle"></div>
+			
+		<h2><p style="text-align:center">THANK YOU FOR VISITING MY SITE!</p></h2>
+	</body>
+</html>
+-->
