--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-fixed-top navbar-custom">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand">Derek Xu</a>
+        <a class="navbar-brand" href="#top">Derek Xu</a>
 		<button type="button" class="navbar-toggle" data-target="#myNav" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
@@ -79,8 +79,11 @@
 				worked on. Hope you have a nice time here!
 			</h4>
 		</tr>
+		<br>
 		<tr>
-			<img border="0" src="circuit.png" height=60% width=100% align="center">
+			<div style="text-align: center;">
+				<img border="0" src="circuit.png" height=60% width=80% align="center">
+			</div>
 		</tr>
 		<br>
 		<br>
