--- a/index.html
+++ b/index.html
@@ -10,83 +10,83 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <nav class="navbar navbar-fixed-top navbar-custom">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#top">Derek Xu</a>
-		<button type="button" class="navbar-toggle" data-target="#myNav" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-	  </div>
-	  <div class="collapse navbar-collapse" id="myNav">
-      <ul class="nav navbar-nav mn_primary_menu">
-        <li><a href="https://www.github.com/DerekQXu">Github</a></li>
-        <li class="dropdown mn_dropdown_menu">
-			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-			area-expanded="false">Projects <span class = "caret"></span></a>
-			<ul class="dropdown-menu">
-				<li><a href="https://www.github.com/DerekQXu/Gaze_Detection_with_OpenCV">
-                        Pupil Detection</a></li>
-				<li><a href="https://www.github.com/DerekQXu/16x16_MicroMouse_Simulator">
-                        Micromouse Simulator</a></li>
-				<li><a href="http://electronics-shop.pa.ucla.edu">
-                        Ion-trapping Machine (UCLA eShop)</a></li>
-				<li><a href="http://iot.seas.ucla.edu/UCLA-STMicro/index.php/Home">
-                        BlueTooth LE with STMicro and BeagleBone</a></li>
-				<li><a href="https://www.github.com/DerekQXu/EE3-Project-NATCAR-">
-                        R.A.T. and NATCAR (IEEE)</a></li>
-				<li><a href="https://www.github.com/DerekQXu/Scheduler">Terminal Schedular</a></li>
-				<li><a href="#">
-                        WiFi Localization with ML</a></li>
-				<li><a href="http://electronics-shop.pa.ucla.edu">
-                        Custom Variable HVPS (UCLA eShop)</a></li>
-				<li><a href="https://www.github.com/DerekQXu/CCD_Correction">
-                        CCD Correction Software</a></li>
-				<li><a href="https://www.github.com/DerekQXu/Edge-Detection_using_Lateral-Inhibition">
-                        Edge Detection with Lateral Inhibition</a></li>
-                <li><a href="https://www.github.com/DerekQXu/Conways_Game_of_Life">
-                        Conway's Game of Life</a></li>
-			</ul>
-		</li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-	  </div>
-    </div>
-  </nav>
-  <head>
-    <meta charset="utf-8"> 
-	<meta name="viewport" content="width=device-width, initial-scale=0.7">
-	<!-- CSS stuff -->
-	<link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="text">
-		<table border="0" width="100%">
-		<br>
-		<br>
-		<tr>
-			<h1>
-				ABOUT.ME
-			</h1>
-			<h4>
-				My name is Derek Xu. I am a second year Electrical
-				Engineering major at the University of California, Los 
-				Angeles. I am interested in programming, soldering, and
-				designing new technologies. This website contains a 
-				compilation of software and hardware projects I have
-				worked on. Hope you have a nice time here!
-			</h4>
-		</tr>
-		<br>
-		<tr>
-			<div class="content" style="text-align: center;" border="0">
-				<img border="0" src="circuit.png" height=40% width=80% align="center">
-			</div>
-		</tr>
-		<br>
-		<br>
-	</div>
-  </body>
+    <nav class="navbar navbar-fixed-top navbar-custom">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#top">Derek Xu</a>
+                <button type="button" class="navbar-toggle" data-target="#myNav" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="myNav">
+                <ul class="nav navbar-nav mn_primary_menu">
+                    <li><a href="https://www.github.com/DerekQXu">Github</a></li>
+                    <li class="dropdown mn_dropdown_menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                                                                                                 area-expanded="false">Projects <span class = "caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="https://www.github.com/DerekQXu/Gaze_Detection_with_OpenCV">
+                                    Pupil Detection</a></li>
+                            <li><a href="https://www.github.com/DerekQXu/16x16_MicroMouse_Simulator">
+                                    Micromouse Simulator</a></li>
+                            <li><a href="http://electronics-shop.pa.ucla.edu">
+                                    Ion-trapping Machine (UCLA eShop)</a></li>
+                            <li><a href="http://iot.seas.ucla.edu/UCLA-STMicro/index.php/Home">
+                                    BlueTooth LE with STMicro and BeagleBone</a></li>
+                            <li><a href="https://www.github.com/DerekQXu/EE3-Project-NATCAR-">
+                                    R.A.T. and NATCAR (IEEE)</a></li>
+                            <li><a href="https://www.github.com/DerekQXu/Scheduler">Terminal Schedular</a></li>
+                            <li><a href="#">
+                                    WiFi Localization with ML</a></li>
+                            <li><a href="http://electronics-shop.pa.ucla.edu">
+                                    Custom Variable HVPS (UCLA eShop)</a></li>
+                            <li><a href="https://www.github.com/DerekQXu/CCD_Correction">
+                                    CCD Correction Software</a></li>
+                            <li><a href="https://www.github.com/DerekQXu/Edge-Detection_using_Lateral-Inhibition">
+                                    Edge Detection with Lateral Inhibition</a></li>
+                            <li><a href="https://www.github.com/DerekQXu/Conways_Game_of_Life">
+                                    Conway's Game of Life</a></li>
+                        </ul>
+                    </li>
+                    <li><a href=".\contact\contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <head>
+        <meta charset="utf-8"> 
+        <meta name="viewport" content="width=device-width, initial-scale=0.7">
+        <!-- CSS stuff -->
+        <link href="style.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="text">
+            <table border="0" width="100%">
+                <br>
+                <br>
+                <tr>
+                    <h1>
+                        ABOUT.ME
+                    </h1>
+                    <h3>
+                        My name is Derek Xu. I am a second year Electrical
+                        Engineering major at the University of California, Los 
+                        Angeles. I am interested in programming, soldering, and
+                        designing new technologies. This website contains a 
+                        compilation of software and hardware projects I have
+                        worked on. Hope you have a nice time here!
+                    </h3>
+                </tr>
+                <br>
+                <tr>
+                    <div class="content" title="Sauce: Alain Bousquet's edit of Wave of Kanagawa" style="text-align: center;" border="0">
+                        <img border="0" src="image.png" height=40% width=80% align="center">
+                    </div>
+                </tr>
+                <br>
+                <br>
+        </div>
+    </body>
 </html>
