--- a/contact.html
+++ b/contact.html
@@ -10,72 +10,72 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <nav class="navbar navbar-fixed-top navbar-custom">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">Derek Xu</a>
-		<button type="button" class="navbar-toggle" data-target="#myNav" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-	  </div>
-	  <div class="collapse navbar-collapse" id="myNav">
-      <ul class="nav navbar-nav mn_primary_menu">
-        <li><a href="https://www.github.com/DerekQXu">Github</a></li>
-        <li class="dropdown mn_dropdown_menu">
-			<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-			area-expanded="false">Projects <span class = "caret"></span></a>
-			<ul class="dropdown-menu">
-				<li><a href="https://www.github.com/DerekQXu/Gaze_Detection_with_OpenCV">
-                        Pupil Detection</a></li>
-				<li><a href="https://www.github.com/DerekQXu/16x16_MicroMouse_Simulator">
-                        Micromouse Simulator</a></li>
-				<li><a href="http://electronics-shop.pa.ucla.edu">
-                        Ion-trapping Machine (UCLA eShop)</a></li>
-				<li><a href="http://iot.seas.ucla.edu/UCLA-STMicro/index.php/Home">
-                        BlueTooth LE with STMicro and BeagleBone</a></li>
-				<li><a href="https://www.github.com/DerekQXu/EE3-Project-NATCAR-">
-                        R.A.T. and NATCAR (IEEE)</a></li>
-				<li><a href="https://www.github.com/DerekQXu/Scheduler">Terminal Schedular</a></li>
-				<li><a href="#">
-                        WiFi Localization with ML</a></li>
-				<li><a href="http://electronics-shop.pa.ucla.edu">
-                        Custom Variable HVPS (UCLA eShop)</a></li>
-				<li><a href="https://www.github.com/DerekQXu/CCD_Correction">
-                        CCD Correction Software</a></li>
-				<li><a href="https://www.github.com/DerekQXu/Edge-Detection_using_Lateral-Inhibition">
-                        Edge Detection with Lateral Inhibition</a></li>
-                <li><a href="https://www.github.com/DerekQXu/Conways_Game_of_Life">
-                        Conway's Game of Life</a></li>
-			</ul>
-		</li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-	  </div>
-    </div>
-  </nav>
-  <head>
-    <meta charset="utf-8"> 
-	<meta name="viewport" content="width=device-width, initial-scale=0.7">
-	<!-- CSS stuff -->
-	<link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="text">
-		<br>
-		<br>
-		<h1>
-            Contact
-		</h1>
-		<h3>
-            Email: derekqxu@gmail.com<br />
-        </h3>
-        <p>
+    <nav class="navbar navbar-fixed-top navbar-custom">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="..\index.html">Derek Xu</a>
+                <button type="button" class="navbar-toggle" data-target="#myNav" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="myNav">
+                <ul class="nav navbar-nav mn_primary_menu">
+                    <li><a href="https://www.github.com/DerekQXu">Github</a></li>
+                    <li class="dropdown mn_dropdown_menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                                                                                                 area-expanded="false">Projects <span class = "caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="https://www.github.com/DerekQXu/Gaze_Detection_with_OpenCV">
+                                    Pupil Detection</a></li>
+                            <li><a href="https://www.github.com/DerekQXu/16x16_MicroMouse_Simulator">
+                                    Micromouse Simulator</a></li>
+                            <li><a href="http://electronics-shop.pa.ucla.edu">
+                                    Ion-trapping Machine (UCLA eShop)</a></li>
+                            <li><a href="http://iot.seas.ucla.edu/UCLA-STMicro/index.php/Home">
+                                    BlueTooth LE with STMicro and BeagleBone</a></li>
+                            <li><a href="https://www.github.com/DerekQXu/EE3-Project-NATCAR-">
+                                    R.A.T. and NATCAR (IEEE)</a></li>
+                            <li><a href="https://www.github.com/DerekQXu/Scheduler">Terminal Schedular</a></li>
+                            <li><a href="#">
+                                    WiFi Localization with ML</a></li>
+                            <li><a href="http://electronics-shop.pa.ucla.edu">
+                                    Custom Variable HVPS (UCLA eShop)</a></li>
+                            <li><a href="https://www.github.com/DerekQXu/CCD_Correction">
+                                    CCD Correction Software</a></li>
+                            <li><a href="https://www.github.com/DerekQXu/Edge-Detection_using_Lateral-Inhibition">
+                                    Edge Detection with Lateral Inhibition</a></li>
+                            <li><a href="https://www.github.com/DerekQXu/Conways_Game_of_Life">
+                                    Conway's Game of Life</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <head>
+        <meta charset="utf-8"> 
+        <meta name="viewport" content="width=device-width, initial-scale=0.7">
+        <!-- CSS stuff -->
+        <link href="..\style.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="text">
+            <br>
+            <br>
+            <h1>
+                Contact
+            </h1>
+            <h2>
+                Email: derekqxu@gmail.com<br />
+            </h2>
+            <p>
             For additional information such as resume/CV, phone number, address,
             please send me a private email.
-		</p>
-		<br>
-	</div>
-  </body>
+            </p>
+            <br>
+        </div>
+    </body>
 </html>
