--- a/index.html
+++ b/index.html
@@ -10,83 +10,135 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <nav class="navbar navbar-fixed-top navbar-custom">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#top">Derek Xu</a>
-                <button type="button" class="navbar-toggle" data-target="#myNav" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="myNav">
-                <ul class="nav navbar-nav mn_primary_menu">
-                    <li><a href="https://www.github.com/DerekQXu">Github</a></li>
-                    <li class="dropdown mn_dropdown_menu">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                                                                                                 area-expanded="false">Projects <span class = "caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="https://www.github.com/DerekQXu/Gaze_Detection_with_OpenCV">
-                                    Pupil Detection</a></li>
-                            <li><a href="https://www.github.com/DerekQXu/16x16_MicroMouse_Simulator">
-                                    Micromouse Simulator</a></li>
-                            <li><a href="http://electronics-shop.pa.ucla.edu">
-                                    Ion-trapping Machine (UCLA eShop)</a></li>
-                            <li><a href="http://iot.seas.ucla.edu/UCLA-STMicro/index.php/Home">
-                                    BlueTooth LE with STMicro and BeagleBone</a></li>
-                            <li><a href="https://www.github.com/DerekQXu/EE3-Project-NATCAR-">
-                                    R.A.T. and NATCAR (IEEE)</a></li>
-                            <li><a href="https://www.github.com/DerekQXu/Scheduler">Terminal Schedular</a></li>
-                            <li><a href="#">
-                                    WiFi Localization with ML</a></li>
-                            <li><a href="http://electronics-shop.pa.ucla.edu">
-                                    Custom Variable HVPS (UCLA eShop)</a></li>
-                            <li><a href="https://www.github.com/DerekQXu/CCD_Correction">
-                                    CCD Correction Software</a></li>
-                            <li><a href="https://www.github.com/DerekQXu/Edge-Detection_using_Lateral-Inhibition">
-                                    Edge Detection with Lateral Inhibition</a></li>
-                            <li><a href="https://www.github.com/DerekQXu/Conways_Game_of_Life">
-                                    Conway's Game of Life</a></li>
-                        </ul>
-                    </li>
-                    <li><a href=".\contact\contact.html">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <head>
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=0.7">
-        <!-- CSS stuff -->
-        <link href="style.css" rel="stylesheet">
+        <!-- CSS stuff -->  <style>
+	/* Remove the navbar's default margin-bottom and rounded borders */ 
+	.navbar {
+		margin-bottom: 0;
+		border-radius: 0;
+	}
+	
+    /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
+    .row.content {height: 450px}
+
+    /* Set gray background color and 100% height */
+    .sidenav {
+        padding-top: 20px;
+        background-color: #f1f1f1;
+        height: 170%;
+    }
+
+
+    /* On small screens, set height to 'auto' for sidenav and grid */
+    @media screen and (max-width: 767px) {
+        .sidenav {
+            height: auto;
+            padding: 15px;
+        }
+        .row.content {height:auto;} 
+    }
+        </style>
     </head>
     <body>
-        <div class="text">
-            <table border="0" width="100%">
-                <br>
-                <br>
-                <tr>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#top">Derek Xu</a>
+                    <button type="button" class="navbar-toggle" data-target="#myNav" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="myNav">
+                    <ul class="nav navbar-nav mn_primary_menu">
+                        <li><a href="https://www.github.com/DerekQXu">Github</a></li>
+                        <li class="dropdown mn_dropdown_menu">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                                                                                                     area-expanded="false">Projects <span class = "caret"></span></a>
+                            <ul class="dropdown-menu">
+								<li><a href="https://github.com/DerekQXu/Real_Time_Motion_Detection_with_ML_and_BLE">
+                                        BLE Machine Learning System</a></li>
+								<li><a href="https://github.com/DerekQXu/Chat_App">
+                                        Chatting Application</a></li>
+                                <li><a href="https://www.github.com/DerekQXu/Gaze_Detection_with_OpenCV">
+                                        Pupil Detection</a></li>
+                                <li><a href="https://www.github.com/DerekQXu/16x16_MicroMouse_Simulator">
+                                        Micromouse Simulator</a></li>
+                                <li><a href="http://electronics-shop.pa.ucla.edu">
+                                        Ion-trapping Machine (UCLA eShop)</a></li>
+                                <li><a href="http://iot.seas.ucla.edu/UCLA-STMicro/index.php/Home">
+                                        BlueTooth LE with STMicro and BeagleBone</a></li>
+                                <li><a href="https://www.github.com/DerekQXu/EE3-Project-NATCAR-">
+                                        R.A.T. and NATCAR (IEEE)</a></li>
+                                <li><a href="https://www.github.com/DerekQXu/Scheduler">Terminal Schedular</a></li>
+                                <li><a href="#">
+                                        WiFi Localization with ML</a></li>
+                                <li><a href="http://electronics-shop.pa.ucla.edu">
+                                        Custom Variable HVPS (UCLA eShop)</a></li>
+                                <li><a href="https://www.github.com/DerekQXu/CCD_Correction">
+                                        CCD Correction Software</a></li>
+                                <li><a href="https://www.github.com/DerekQXu/Edge-Detection_using_Lateral-Inhibition">
+                                        Edge Detection with Lateral Inhibition</a></li>
+                                <li><a href="https://www.github.com/DerekQXu/Conways_Game_of_Life">
+                                        Conway's Game of Life</a></li>
+                            </ul>
+                        </li>
+                        <li><a href=".\pages\experience.html">Resume</a></li>
+                        <li><a href=".\pages\contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container-fluid text-center">    
+            <div class="col-sm-2 sidenav">
+            </div>
+            <div class="col-sm-8 text-left"> 
                     <h1>
-                        ABOUT.ME
+                        About.Me
                     </h1>
-                    <h3>
-                        My name is Derek Xu. I am a second year Electrical
-                        Engineering major at the University of California, Los 
-                        Angeles. I am interested in programming, soldering, and
-                        designing new technologies. This website contains a 
-                        compilation of software and hardware projects I have
-                        worked on. Hope you have a nice time here!
-                    </h3>
-                </tr>
-                <br>
-                <tr>
-                    <div class="content" title="Sauce: Alain Bousquet's edit of Wave of Kanagawa" style="text-align: center;" border="0">
-                        <img border="0" src="image.png" height=40% width=80% align="center">
-                    </div>
-                </tr>
-                <br>
-                <br>
+                    <h4>
+                        I am currently a 3rd year student at UCLA studying Computer
+                        Science and Engineering. I am interested in machine
+                        learning, data analysis, and signal processing.
+                        <br><br>
+                        I enjoy making cool software hardware projects using novel
+						technologies, and work at the UCLA electronics shop, where
+						I write firmware, driver, and embedded software for physics
+						electronics.
+                        <br><br>
+                        In my free time, I enjoy playing jazz guitar and hiking. :)
+						<br>
+                    </h4>
+					<img src="image.png" title="Smart Watch Project from IDEA Hacks 2017"  alt="(Portable) Smart Watch from IDEA Hacks", width="795", height="320">
+                    <br>
+                    <h2> Languges </h2>
+                    <h4>
+                        Python, C, C++, BASH/Expect, Javascript, Java, HTML/CSS, SQL
+                    </h4>
+                    <h2> Libraries </h2>
+                    <h4>
+                        Keras, Tensorflow, FANN, OpenCV, Bluetoothctl, LiquidDSP
+                    </h4>
+                    <h2> Frameworks </h2>
+                    <h4>
+                        NodeJS, Express, React, Mongodb/mongoose
+                    </h4>
+                    <h2> Tools </h2>
+                    <h4>
+                        Git, Linux/Unix, Vim, Shell-Scripting
+                    </h4>
+                    <h2> Hardware </h2>
+                    <h4>
+                        EAGLE/Altium, Embedded/MCU, Firmware, Control (PID, etc.), DSP filters
+                    </h4>
+            </div>
+            <div class="col-sm-2 sidenav">
+            </div>
         </div>
+
     </body>
 </html>
