--- a/index.html
+++ b/index.html
@@ -101,14 +101,11 @@
                         About.Me
                     </h1>
                     <h4>
-                        I am currently a 3rd year student at UCLA studying Computer
+                        (This website is currently under maitenance) I am currently a 3rd year student at UCLA studying Computer
                         Science and Engineering. I am interested in machine
-                        learning, data analysis, and signal processing.
+                        learning, signal processing, and  data mining.
                         <br><br>
-                        I enjoy making cool software hardware projects using novel
-						technologies, and work at the UCLA electronics shop, where
-						I write firmware, driver, and embedded software for physics
-						electronics.
+                        I enjoy making cool software and hardware projects using novel technologies.
                         <br><br>
                         In my free time, I enjoy playing jazz guitar and hiking. :)
 						<br>
