--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<h2>About Me</h2>
 						</header>
 						<p>Hi! My name is Derek.
-							I am currently as second-year Ph.D. student at the
+							I am currently a second-year Ph.D. student at the
 							University of California, Los Angeles (UCLA). My
 							advisors are Prof. <a href="http://web.cs.ucla.edu/~yzsun/">Yizhou Sun</a> and Prof. <a href="http://web.cs.ucla.edu/~weiwang/">Wei Wang</a>.
 							<br><br>
@@ -81,7 +81,7 @@
 								a hierarchical loss function capturing equivalent ground
 								truths at different granularities.
 								</p>
-								<p><i>Bai, Y.*, Xu, D.*, Gu, K., Wu, X., Marinovic, A., Ro, C., Sun, Y., & Wang, W. (2019). Neural maximum common subgraph detection with guided subgraph extraction. <a href="https://arxiv.org/abs/2002.03129">[paper link]</a></i></p>
+								<p><i>Bai, Y.*, Xu, D.*, Gu, K., Wu, X., Marinovic, A., Ro, C., Sun, Y., & Wang, W. (2019). Neural maximum common subgraph detection with guided subgraph extraction. <a href="https://openreview.net/forum?id=BJgcwh4FwS">[paper link]</a></i></p>
 							</article>
 							<article class="work-item">
 								<h3>Embedded Machine Learning on STM Sensortile</h3>
